[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = "Advent of Code solutions in Python"
authors = ["gmorpheme"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pyright = "^1.1.338"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
